--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-# spring.datasource.url=jdbc:mysql://localhost:3306/newit?serverTimezone=GMT%2B8
-# spring.datasource.username=root
-# spring.datasource.password=12345678
-spring.datasource.url=jdbc:mysql://microservicestudy.c3vxz8rzbr8b.rds.cn-northwest-1.amazonaws.com.cn:3306/newit?serverTimezone=GMT%2B8
-spring.datasource.username=newit
-spring.datasource.password=newitstudy
+spring.datasource.url=jdbc:mysql://localhost:3306/newit?serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=12345678
+#spring.datasource.url=jdbc:mysql://microservicestudy.c3vxz8rzbr8b.rds.cn-northwest-1.amazonaws.com.cn:3306/newit?serverTimezone=GMT%2B8
+#spring.datasource.username=newit
+#spring.datasource.password=newitstudy
 
 server.port=9603
+
+mybatis.mapper-locations=classpath:mapper/*.xml
